--- a/graphicdesignismypassion.css
+++ b/graphicdesignismypassion.css
@@ -4,18 +4,36 @@
 body{
     background-color: #333300;
     color: #ffc90e;
-     font-family: Tahoma;
-       font-size: 100%;
-         border: 2px solid rgb(255, 255, 255);
-          padding: 30px;
-          text-align: center;
-    display: block;margin-left: auto;margin-right: auto;
-   .flex-container {
-    display: flex; margin-left: auto;margin-right: auto;
-   }
-   
-     
+    font-family: Tahoma;
+    font-size: 100%;
+      border: 2px solid rgb(255, 255, 255);
+       padding: 30px;
+       text-align: center;
 
 
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 10px; 
+  margin-bottom: 20px;
+}
+
+
+.grid-item img {
+  width: 100%; 
+  height: auto; 
+}
+
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+
+footer {
+  text-align: center;
+  margin-top: 20px;
+}
 }
